# sparkies

./: .gitignore  Makefile  README.md  pyproject.toml
cluster/: Dockerfile  build-docker.sh  build.sh  delete.sh
cluster/configs/: spark-defaults.conf  spark-master  spark-worker
cluster/kubernetes/: minikube-ingress.yaml  spark-executor-deployment.yaml  spark-master-deployment.yaml  spark-master-service.yaml
src/: package_py_depths.sh
src/python/: test.py
