
[tool.poetry]
name = "sparkies"
version = "0.1.0"
description = ""
authors = ["Daniel Restrepo Hincapie <drest@softserveinc.com>"]
license = "file:LICENSE"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "3.2.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
jsonschema = "^4.5.1"
boto3 = "^1.22.11"
smart-open = {extras = ["s3"], version = "^6.0.0"}

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
